--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coreui/coreui": "^4.2.1",
+    "@coreui/react": "^4.3.1",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.10.2",
@@ -16,12 +18,14 @@
     "better-react-spinkit": "^2.0.4",
     "email-validator": "^2.0.4",
     "firebase": "^9.9.3",
+    "moment": "^2.29.4",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-google-button": "^0.7.2",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "timeago-react": "^3.0.5"
   },
   "devDependencies": {
     "eslint": "8.23.0",
